<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createCharacterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="@string/createCharacter"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:paddingTop="4dp"/>

    <EditText
        android:id="@+id/enterNameView"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Skriv in ditt hjältenamn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/luckView"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="@string/luck"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@id/enterNameView"
        app:layout_constraintTop_toBottomOf="@id/enterNameView"
        android:paddingTop="4dp"
        android:layout_marginTop="12dp"/>

    <ImageButton
        android:id="@+id/luckRemove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_remove_24"
        app:layout_constraintStart_toEndOf="@id/luckView"
        app:layout_constraintTop_toTopOf="@id/luckView"
        tools:src="@drawable/baseline_remove_24" />

    <TextView
        android:id="@+id/luckNumber"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="5"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@id/luckRemove"
        app:layout_constraintTop_toTopOf="@id/luckView"
        tools:src="@drawable/baseline_add_24"
        android:paddingTop="4dp"/>

    <ImageButton
        android:id="@+id/luckAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/luckNumber"
        app:layout_constraintTop_toTopOf="@id/luckView"
        tools:src="@drawable/baseline_add_24" />



    <TextView
        android:id="@+id/strengthView"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="@string/strength"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@id/enterNameView"
        app:layout_constraintTop_toBottomOf="@id/luckView"
        android:paddingTop="4dp"
        android:layout_marginTop="12dp"/>

    <ImageButton
        android:id="@+id/strengthRemove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_remove_24"
        app:layout_constraintStart_toEndOf="@id/strengthView"
        app:layout_constraintTop_toTopOf="@id/strengthView"
        tools:src="@drawable/baseline_remove_24" />

    <TextView
        android:id="@+id/strengthNumber"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="5"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@id/strengthRemove"
        app:layout_constraintTop_toTopOf="@id/strengthView"
        tools:src="@drawable/baseline_add_24"
        android:paddingTop="4dp"/>

    <ImageButton
        android:id="@+id/strengthAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/strengthNumber"
        app:layout_constraintTop_toTopOf="@id/strengthView"
        tools:src="@drawable/baseline_add_24" />


    <TextView
        android:id="@+id/armorView"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="@string/armor"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@id/strengthView"
        app:layout_constraintTop_toBottomOf="@id/strengthView"
        android:paddingTop="4dp"
        android:layout_marginTop="12dp"/>

    <ImageButton
        android:id="@+id/armorRemove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_remove_24"
        app:layout_constraintStart_toEndOf="@id/armorView"
        app:layout_constraintTop_toTopOf="@id/armorView"
        tools:src="@drawable/baseline_remove_24" />

    <TextView
        android:id="@+id/armorNumber"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="5"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@id/armorRemove"
        app:layout_constraintTop_toTopOf="@id/armorView"
        tools:src="@drawable/baseline_add_24"
        android:paddingTop="4dp"/>

    <ImageButton
        android:id="@+id/armorAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/armorNumber"
        app:layout_constraintTop_toTopOf="@id/armorView"
        tools:src="@drawable/baseline_add_24" />



    <TextView
        android:id="@+id/agilityView"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="@string/agility"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@id/armorView"
        app:layout_constraintTop_toBottomOf="@id/armorView"
        android:paddingTop="4dp"
        android:layout_marginTop="12dp"/>

    <ImageButton
        android:id="@+id/agilityRemove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_remove_24"
        app:layout_constraintStart_toEndOf="@id/agilityView"
        app:layout_constraintTop_toTopOf="@id/agilityView"
        tools:src="@drawable/baseline_remove_24" />

    <TextView
        android:id="@+id/agilityNumber"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:fontFamily="@font/blackmoor_regular"
        android:text="5"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@id/agilityRemove"
        app:layout_constraintTop_toTopOf="@id/agilityView"
        tools:src="@drawable/baseline_add_24"
        android:paddingTop="4dp"/>

    <ImageButton
        android:id="@+id/agilityAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/agilityNumber"
        app:layout_constraintTop_toTopOf="@id/agilityView"
        tools:src="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/totalNumber"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        app:layout_constraintTop_toBottomOf="@id/agilityView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/blackmoor_regular"
        android:textSize="24sp"
        />




    <Button
        android:id="@+id/saveButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:fontFamily="@font/blackmoor_regular"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="12dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>